docs: update README for clarity and add installation instructions