@@ -1,94 +1,102 @@
-# genj - Java Project Generator (Version Java)
+# genj - Java Project Generator
 
-Réimplémentation en Java du générateur de projets Java `genj` initialement écrit en Rust.
+A Java project generator that scaffolds new projects from customizable templates.
 
-## Prérequis
+This is a full rewrite in Java of the original [`genj`](https://github.com/mcgivrer/genj) tool, initially developed in Rust, bringing the same powerful features with the familiarity of the Java ecosystem.
 
-- JDK 25 avec les fonctionnalités preview activées
+## Prerequisites
+
+- JDK 25 with preview features enabled
 - Maven 3.9+
 
-## Compilation
+## Installation
+
+Build and install genj using the provided install script:
 
 ```bash
-cd java-version
+# First, compile the project
+mvn clean package
+
+# Then install genj to ~/.local/bin
+./install.sh
+```
+
+The installer will:
+- Copy the JAR to `~/.local/lib/genj/`
+- Compress and copy templates to `~/.local/share/genj/templates/`
+- Create a `genj` wrapper script in `~/.local/bin/`
+
+> **Note:** Make sure `~/.local/bin` is in your PATH. Add this to your `~/.bashrc` or `~/.zshrc`:
+> ```bash
+> export PATH="${HOME}/.local/bin:${PATH}"
+> ```
+
+## Usage
+
+Once installed, use the `genj` command:
+
+```bash
+# List available templates
+genj --list
+
+# Search for a template
+genj --search game
+
+# Generate a new project
+genj \
+    -t java-basic-main \
+    -n MyProject \
+    -k com.example \
+    -a "Your Name" \
+    -e "your.email@example.com"
+```
+
+### Options
+
+| Option | Description | Default |
+|--------|-------------|---------|
+| `-t, --template` | Template path (ZIP or folder) | - |
+| `-d, --destination` | Destination directory | `.` |
+| `-n, --project_name` | Project name | `Demo` |
+| `-a, --author` | Author name | `Unknown Author` |
+| `-e, --email` | Author email | `email@unknown.local` |
+| `-v, --project_version` | Project version | `0.0.1` |
+| `-j, --java_version` | JDK version | `25` |
+| `-f, --java_flavor` | JDK flavor for sdkman | `25-zulu` |
+| `-k, --package` | Java package | `com.demo` |
+| `-m, --mainclass` | Main class name | `App` |
+| `-b, --build` | Build tool (maven/gradle) | `maven` |
+| `--maven_version` | Maven version for sdkman | `3.9.5` |
+| `--gradle_version` | Gradle version for sdkman | `8.5` |
+| `-l, --vendor_name` | Vendor name | `Vendor` |
+| `-r, --remote_git` | Remote Git repository URL | - |
+| `--verbose` | Verbose mode | `false` |
+| `--list` | List available templates | - |
+| `-s, --search` | Search templates | - |
+
+## Documentation
+
+- [User Guide](src/main/docs/user-guide-en.md) - Complete guide for using genj
+- [Architecture Design](src/main/docs/architecture-design.md) - Technical architecture and design decisions
+
+## Contributing
+
+Contributions are welcome! To contribute:
+
+1. Fork the repository: https://github.com/mcgivrer/genjava.git
+2. Create a feature branch: `git checkout -b feature/my-feature`
+3. Make your changes and commit: `git commit -m "Add my feature"`
+4. Push to your fork: `git push origin feature/my-feature`
+5. Open a Pull Request
+
+### Building from source
+
+```bash
+git clone https://github.com/mcgivrer/genjava.git
+cd genjava
 mvn clean package
 ```
 
-## Utilisation
+## License
 
-```bash
-# Lister les templates disponibles
-java --enable-preview -jar target/genj-1.0.0.jar --list
-
-# Rechercher un template
-java --enable-preview -jar target/genj-1.0.0.jar --search game
-
-# Générer un projet
-java --enable-preview -jar target/genj-1.0.0.jar \
-    -t /chemin/vers/template \
-    -n MonProjet \
-    -k com.example \
-    -a "Mon Nom" \
-    -e "email@example.com"
-```
-
-## Options
-
-| Option | Description | Défaut |
-|--------|-------------|--------|
-| `-t, --template` | Chemin vers le template (ZIP ou dossier) | - |
-| `-d, --destination` | Répertoire de destination | `.` |
-| `-n, --project_name` | Nom du projet | `Demo` |
-| `-a, --author` | Nom de l'auteur | `Unknown Author` |
-| `-e, --email` | Email de l'auteur | `email@unknown.local` |
-| `-v, --project_version` | Version du projet | `0.0.1` |
-| `-j, --java_version` | Version JDK | `25` |
-| `-f, --java_flavor` | Flavor JDK pour sdkman | `25-zulu` |
-| `-k, --package` | Package Java | `com.demo` |
-| `-m, --mainclass` | Classe principale | `App` |
-| `-b, --build` | Outil de build (maven/gradle) | `maven` |
-| `--maven_version` | Version Maven pour sdkman | `3.9.5` |
-| `--gradle_version` | Version Gradle pour sdkman | `8.5` |
-| `-l, --vendor_name` | Nom du vendeur | `Vendor` |
-| `-r, --remote_git` | URL du dépôt Git distant | - |
-| `--verbose` | Mode verbeux | `false` |
-| `--list` | Lister les templates | - |
-| `-s, --search` | Rechercher des templates | - |
-
-## Architecture
-
-Le projet utilise uniquement les fonctionnalités du JDK 25 :
-- **Records** pour les structures de données immuables (`CliConfig`)
-- **Text Blocks** pour les templates de chaînes multi-lignes
-- **Pattern Matching** dans les switch expressions
-- **Stream API** pour le traitement des collections
-
-### Structure du code
-
-```
-src/main/java/com/genj/
-├── Main.java           # Point d'entrée principal
-├── CliConfig.java      # Record de configuration CLI
-├── CliParser.java      # Parseur d'arguments en ligne de commande
-├── FileUtils.java      # Utilitaires de manipulation de fichiers
-├── GenrcWriter.java    # Générateur du fichier .genrc
-├── Log.java            # Utilitaires de logging
-├── TemplateLister.java # Listage et recherche de templates
-├── TemplateProcessor.java # Traitement des templates
-└── VscodeGitSetup.java # Configuration VSCode et Git
-```
-
-## Dépendances
-
-- **JGit** : Pour les opérations Git (initialisation, commit, remote)
-
-## Différences avec la version Rust
-
-Cette version Java reproduit fidèlement les fonctionnalités de la version Rust :
-- Génération de projets à partir de templates (dossiers ou ZIP)
-- Remplacement des placeholders (`${PROJECT_NAME}`, `${PACKAGE}`, etc.)
-- Génération de `pom.xml` ou `build.gradle`
-- Génération de `.sdkmanrc`
-- Génération de `.genrc`
-- Configuration VSCode
-- Initialisation du dépôt Git avec commit initial
+This project is licensed under the MIT License - see the [LICENSE](LICENSE) file for details.
